Changelog
=========

0.11.3 -
-------------------

- When regenerating a message default to chat completion as tools do not work when streaming.
  [ggozad]

- When editing a chat filter out tools that are no longer available.
  [ggozad]

0.11.2 - 2025-04-22
-------------------

- Support for SSE & WS MCP transports.
  [ggozad]

0.11.1 - 2025-04-17
-------------------

- Fix error with prompts not submitting if they have no fields.
  [ggozad]

- Group tools by MCP server.
  [ggozad]

0.11.0 - 2025-04-13
-------------------

- MCP Sampling support.
  [ggozad]

0.10.3 - 2025-04-13
-------------------

- Built-in log viewer.
  [ggozad]

0.10.2 - 2025-04-12
-------------------

- Improve and release textualeffects for faster splash screen.
  [ggozad]

- Faster boot by performing version & ollama checks in parallel.
  [ggozad]

- Documentation for development & debugging.
  [ggozad]

0.10.1 - 2025-04-09
-------------------

- More stability handling MCP servers.
  [ggozad]
- Add pre-commit hooks and fix linting errors.
  [ggozad]
- Add "think" tool allowing models to think before responding.
  [ggozad]
- Remove tools that are not that useful.
  [ggozad]

0.10.0 - 2025-04-02
-------------------

- Add sixel support for images.
  [ggozad]

- Enable scrolling with keys within a chat.
  [ggozad]

0.9.5 - 2025-03-25
------------------

- When creating a command, pin the current version of oterm as a dependency.
  [ggozad]

0.9.4 - 2025-03-25
------------------

- Support for MCP prompts.
  [ggozad]


0.9.3 - 2025-03-25
------------------

- Include the default environment when running an mcp server with custom env.
  [ggozad]

0.9.2 - 2025-03-25
------------------

- Override default Ollama Options() to allow for single string as a stop word.
  [ggozad]

- Enable '-h' short-form help option.
  [brucewillke]

- Fix checking latest version on pypi.
  [ggozad]

0.9.1 - 2025-03-25
------------------
- Check with pypi if oterm is up to date.
  [ggozad]

- CLI command creation.