@@ -21,12 +21,12 @@ repos:
     hooks:
       - id: pyright
 
-  # - repo: https://github.com/RodrigoGonzalez/check-mkdocs
-  #   rev: v1.2.0
-  #   hooks:
-  #     - id: check-mkdocs
-  #       name: check-mkdocs
-  #       args: ["--config", "mkdocs.yml"]  # Optional, mkdocs.yml is the default
-  #       # If you have additional plugins or libraries that are not included in
-  #       # check-mkdocs, add them here
-  #       additional_dependencies: ['mkdocs-material']
+  - repo: https://github.com/RodrigoGonzalez/check-mkdocs
+    rev: v1.2.0
+    hooks:
+      - id: check-mkdocs
+        name: check-mkdocs
+        args: ["--config", "mkdocs.yml"] # Optional, mkdocs.yml is the default
+        # If you have additional plugins or libraries that are not included in
+        # check-mkdocs, add them here
+        additional_dependencies: ["mkdocs-material"]
