@@ -31,7 +31,6 @@ dependencies = [
     "textualeffects>=0.1.4",
     "pydantic>=2.11.3,<2.12",
     "mcp[cli]>=1.7.1,<1.8",
-    "jinja2>=3.1.6",
     "textual-image>=0.8.2,<0.9.0",
     "fastmcp>=2.2.1",
 ]
@@ -44,7 +43,6 @@ Documentation = "https://ggozad.github.io/oterm/"
 
 [project.scripts]
 oterm = "oterm.cli.oterm:cli"
-oterm-command = "oterm.cli.command:cli"
 
 [tool.uv]
 dev-dependencies = [
